--- a/src/components/app-random-dish/app-random-dish.scss
+++ b/src/components/app-random-dish/app-random-dish.scss
@@ -15,13 +15,17 @@
     border-radius: 5px;
 
     @include _mobile{
-        padding: 10px 60px;
+        padding: 15px 60px;
     }
+}
+.button:hover{
+    background-color: $white;
 }
 .buttons{
     padding-top: 10px;
     padding-bottom: 10px;
     margin: 0 auto;
+    margin-bottom: 30px;
     width: 390px;
     display: flex;
     justify-content: space-between;
@@ -30,5 +34,6 @@
         width: 90%;
     }
 }
+
 
 
