--- a/src/components/favourites-add-form/favourites-add-form.scss
+++ b/src/components/favourites-add-form/favourites-add-form.scss
@@ -6,8 +6,7 @@
     margin: auto;
     background-color: $white;
     width: 433px;
-    min-height: 407px;
-    max-height: 640px;
+    height: 440px;
     padding: 28px;
     overflow: auto;
     display: flex;
@@ -19,30 +18,41 @@
     @include _mobile{
         width: 85%;
         padding: 16px;
-        min-height: 370px;
+        height: 370px;
+
+    }
+    @include _350-450{
+        height: 85%;
+        padding: 10px 20px;
     }
 }
 .dish-body-title{
+    flex: 1;
     margin: 0;
     font-weight: 700;
     font-size: 18px;
-    line-height: 21px;
+    line-height: 25px;
     color: $dark;
 }
 .form-dish {
+    flex: 9;
+    max-height: calc(100% - 25px);
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     &__name{
-        margin-top: 50px;
-        @include _mobile{
-            margin-top: 40px;
-        }
+        margin-top: 15px;
+        flex: 1;
     }
     &__description{
+        flex: 9;
         margin-top: 17px;
         height: 159px;
         @include _mobile{
-            height: 275px;
+            flex: 6;
+        }
+        @include _350-450{
+            height: 190px;
         }
     }
     &__name,
@@ -63,6 +73,7 @@
     }
     
     &__button{
+        flex: 1;
         padding: 8px 18px;
         text-align: center;
         font-weight: 700;
@@ -86,17 +97,21 @@
 
 .dish-body-close{
     position: absolute;
-    top: 25px;
-    right: 25px;
+    top: 28px;
+    right: 28px;
     cursor: pointer;
     height: 25px;
     width: 25px;
     border: 1px solid $dark;
-    background-color:$white;
+    background-color: rgba(241, 111, 93, 0.904);
     border-radius: 5px;
 
     @include _mobile{
         top: 15px;
         right: 15px;
+    }
+    @include _350-450{
+        top: 10px;
+        right: 20px;
     }
 }
