--- a/src/components/app-header/app-header.scss
+++ b/src/components/app-header/app-header.scss
@@ -61,6 +61,14 @@
 
 .header-button-add{
     display: none;
+}
+.header-button-add:hover{
+    border-color: $grey;
+    background-color: $white;
+    transition: all 0.5s ;
+}
+.active-add-btn{
+    display: block;
     position: absolute;
     right: 0;
     cursor: pointer;
@@ -72,7 +80,7 @@
     color: $dark;
     padding: 10px 28px;
     border-radius: 5px;
-    
+
     @include _mobile{
         opacity: 0;
         z-index: -1;
@@ -90,23 +98,22 @@
         z-index: -1;
     }
 }
-.header-button-add:hover{
-    border-color: $grey;
-    background-color: $white;
-    transition: all 0.5s ;
-}
+
 .header-button-add-sm{
     display: none;
-    
-    
+    opacity: 0;
+    z-index: -1;
+}
+.active-add-btn-sm{
+    display: none;
 
     @include _mobile{
         display: flex;
         margin: 0 auto;
         width: 30px;
-    height: 30px;
-    justify-content: center;
-    align-items: center;
+        height: 30px;
+        justify-content: center;
+        align-items: center;
     }
     
     @include _601-819{
@@ -122,4 +129,3 @@
         height: 30px;
     }
 }
-
